--- a/ETSMobile/ETSAPICoreDataMapping.plist
+++ b/ETSMobile/ETSAPICoreDataMapping.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Event</key>
+	<dict>
+		<key>id</key>
+		<string>id</string>
+		<key>title</key>
+		<string>title</string>
+		<key>start</key>
+		<string>start_date</string>
+		<key>end</key>
+		<string>end_date</string>
+	</dict>
 	<key>Contact</key>
 	<dict>
 		<key>ext</key>
