Ajout de la bande passante détaillée.
L'utilisateur peut consulter la bande passante par port,
par jour. Il peut aussi voir le cummulatif.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Vendors/CRNavigationController"]
 	path = Vendors/CRNavigationController
 	url = git@github.com:croberts22/CRNavigationController.git
+[submodule "Vendors/ios-custom-alertview"]
+	path = Vendors/ios-custom-alertview
+	url = git@github.com:wimagguc/ios-custom-alertview.git
