--- a/ETSMobile/ETSAPICoreDataMapping.plist
+++ b/ETSMobile/ETSAPICoreDataMapping.plist
@@ -2,6 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Bandwidth</key>
+	<dict>
+		<key>id</key>
+		<string>id</string>
+		<key>month</key>
+		<string>month</string>
+		<key>download</key>
+		<string>download</string>
+		<key>upload</key>
+		<string>upload</string>
+		<key>date</key>
+		<string>date</string>
+		<key>port</key>
+		<string>port</string>
+	</dict>
 	<key>Event</key>
 	<dict>
 		<key>id</key>
