--- a/ETSMobile/ETSAPICoreDataMapping.plist
+++ b/ETSMobile/ETSAPICoreDataMapping.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>News</key>
+	<dict>
+		<key>title</key>
+		<string>title</string>
+		<key>link</key>
+		<string>link</string>
+		<key>summary</key>
+		<string>summary</string>
+		<key>published</key>
+		<string>published</string>
+	</dict>
 	<key>Bandwidth</key>
 	<dict>
 		<key>id</key>
