--- a/ETSMobile/NewsSources.plist
+++ b/ETSMobile/NewsSources.plist
@@ -12,7 +12,7 @@
 		<key>url</key>
 		<string>http%3A%2F%2Fwww.etsmtl.ca%2Ffils-rss%3Frss%3DNouvellesRSS</string>
 		<key>enabled</key>
-		<false/>
+		<true/>
 	</dict>
 	<dict>
 		<key>id</key>
@@ -36,7 +36,7 @@
 		<key>url</key>
 		<string>http%3A%2F%2Finterfaceets.wordpress.com%2Ffeed%2F</string>
 		<key>enabled</key>
-		<false/>
+		<true/>
 	</dict>
 </array>
 </plist>
