--- a/ETSMobile/ETSAPICoreDataMapping.plist
+++ b/ETSMobile/ETSAPICoreDataMapping.plist
@@ -2,6 +2,23 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Calendar</key>
+	<dict>
+		<key>id</key>
+		<string>id</string>
+		<key>start</key>
+		<string>dateDebut</string>
+		<key>end</key>
+		<string>dateFin</string>
+		<key>title</key>
+		<string>libelleCours</string>
+		<key>room</key>
+		<string>local</string>
+		<key>summary</key>
+		<string>descriptionActivite</string>
+		<key>course</key>
+		<string>coursGroupe</string>
+	</dict>
 	<key>News</key>
 	<dict>
 		<key>title</key>
