--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "Vendors/MSCollectionViewCalendarLayout"]
 	path = Vendors/MSCollectionViewCalendarLayout
 	url = git@github.com:ApplETS/MSCollectionViewCalendarLayout.git
+[submodule "Vendors/AMScrollingNavbar"]
+	path = Vendors/AMScrollingNavbar
+	url = git@github.com:andreamazz/AMScrollingNavbar.git
