--- a/ETSMobile/NewsSources.plist
+++ b/ETSMobile/NewsSources.plist
@@ -4,37 +4,381 @@
 <array>
 	<dict>
 		<key>id</key>
-		<string>etsmtl.ca</string>
-		<key>backgroundImageName</key>
-		<string>news-ets</string>
+		<string>8632204375</string>
 		<key>name</key>
-		<string>Nouvelles ÉTS</string>
+		<string>École de technologie supérieure</string>
 		<key>url</key>
-		<string>http%3A%2F%2Fwww.etsmtl.ca%2Ffils-rss%3Frss%3DNouvellesRSS</string>
+		<string>https://www.facebook.com/feeds/page.php?id=8632204375&amp;format=json</string>
 		<key>enabled</key>
 		<true/>
 	</dict>
 	<dict>
 		<key>id</key>
-		<string>facebook.com</string>
-		<key>backgroundImageName</key>
-		<string>news-facebook</string>
+		<string>318301358296527</string>
 		<key>name</key>
-		<string>Facebook ÉTS</string>
+		<string>Substance ÉTS</string>
 		<key>url</key>
-		<string>http%3A%2F%2Fwww.facebook.com%2Ffeeds%2Fpage.php%3Fid%3D8632204375%26format%3Datom10</string>
+		<string>https://www.facebook.com/feeds/page.php?id=318301358296527&amp;format=json</string>
 		<key>enabled</key>
 		<true/>
 	</dict>
 	<dict>
 		<key>id</key>
-		<string>interfaceets.wordpress.com</string>
-		<key>backgroundImageName</key>
-		<string>news-newspaper</string>
+		<string>218060244914450</string>
 		<key>name</key>
-		<string>Interface</string>
+		<string>Centre sportif ÉTS</string>
 		<key>url</key>
-		<string>http%3A%2F%2Finterfaceets.wordpress.com%2Ffeed%2F</string>
+		<string>https://www.facebook.com/feeds/page.php?id=218060244914450&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>163718447011305</string>
+		<key>name</key>
+		<string>Club ApplETS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=163718447011305&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>105690876298164</string>
+		<key>name</key>
+		<string>Rafale ÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=105690876298164&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>121015754713487</string>
+		<key>name</key>
+		<string>R&amp;D - Rock &amp; Dance ÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=121015754713487&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>110486232446955</string>
+		<key>name</key>
+		<string>Conjure</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=110486232446955&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>395414797183821</string>
+		<key>name</key>
+		<string>RockÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=395414797183821&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>164607013559595</string>
+		<key>name</key>
+		<string>Phoenix ÉTS Fireball</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=164607013559595&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>126837807493669</string>
+		<key>name</key>
+		<string>ACE, Avion Cargo ÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=126837807493669&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>360076647398495</string>
+		<key>name</key>
+		<string>Club Cycliste Cinétique à l&apos;ÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=360076647398495&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>460299537349517</string>
+		<key>name</key>
+		<string>Football ÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=211557725590576&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>491557250876569</string>
+		<key>name</key>
+		<string>INGénieuses de L&apos;ÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=491557250876569&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>447702428615807</string>
+		<key>name</key>
+		<string>Débat Piranha</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=447702428615807&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>337552962995346</string>
+		<key>name</key>
+		<string>Walking Machine</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=337552962995346&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>323542067682533</string>
+		<key>name</key>
+		<string>Les AthlÉTSiques</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=323542067682533&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>371898792845924</string>
+		<key>name</key>
+		<string>AÉÉTS - Association étudiante de l&apos;ÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=371898792845924&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>377006705649358</string>
+		<key>name</key>
+		<string>Rugby Club - ÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=377006705649358&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>188297367906485</string>
+		<key>name</key>
+		<string>Bibliothèque ÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=188297367906485&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>248185595191443</string>
+		<key>name</key>
+		<string>Club Capra</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=248185595191443&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>103792316390557</string>
+		<key>name</key>
+		<string>IEEE-ÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=103792316390557&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>167760619914316</string>
+		<key>name</key>
+		<string>Compétition PontPop ÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=167760619914316&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>184102168309598</string>
+		<key>name</key>
+		<string>Omer ÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=184102168309598&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>185170678185125</string>
+		<key>name</key>
+		<string>Baja ÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=185170678185125&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>164949146900986</string>
+		<key>name</key>
+		<string>Le canoë de béton de l&apos;ÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=164949146900986&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>213055515399417</string>
+		<key>name</key>
+		<string>Club Chinook ÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=213055515399417&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>202479516430909</string>
+		<key>name</key>
+		<string>Sonia AUV</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=202479516430909&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>103903173690</string>
+		<key>name</key>
+		<string>Lan ETS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=103903173690&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>189628483266</string>
+		<key>name</key>
+		<string>Formule ÉTS propulsée par Vidéotron</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=189628483266&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>166160473418379</string>
+		<key>name</key>
+		<string>Véhicule Solaire Éclipse</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=166160473418379&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>134552903275289</string>
+		<key>name</key>
+		<string>Stage Band Turbulence</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=134552903275289&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>224658708833</string>
+		<key>name</key>
+		<string>PRECI</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=224658708833&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>153080808058020</string>
+		<key>name</key>
+		<string>ReflETS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=153080808058020&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>149411625347</string>
+		<key>name</key>
+		<string>CRABE ÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=149411625347&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>117505511647516</string>
+		<key>name</key>
+		<string>QuiETS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=117505511647516&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>122163981170182</string>
+		<key>name</key>
+		<string>Dronolab</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=122163981170182&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>109108485778606</string>
+		<key>name</key>
+		<string>LiÉTS - Ligue d&apos;improvisation de l’ÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=109108485778606&amp;format=json</string>
+		<key>enabled</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>357404254892</string>
+		<key>name</key>
+		<string>Librairie Coop ÉTS</string>
+		<key>url</key>
+		<string>https://www.facebook.com/feeds/page.php?id=357404254892&amp;format=json</string>
 		<key>enabled</key>
 		<true/>
 	</dict>
